# FactGuard

./: .gitignore  Core.md  README.md  config.py  debug_test.py  env_utils.py  fastapi_app.py  main.py  pipeline.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
baselines/: baseline_rarr.py  baseline_standard_rag.py  baseline_zeroshot.py
build_dataset/: complete_skepticbench.py  generate_new_entries.py  groq_utils.py  merge_datasets.py  verify_dataset.py
data/: skeptic_dataset.csv  skepticbench_sample.json
evaluation/: ablation.py  compare_all.py  skeptic_score.py
modules/: atomicizer.py  cove_loop.py  deep_verifier.py  editor.py  gemini_pdf_reader.py  judge.py  pdf_extractor.py  query_generator.py  retriever.py  second_opinion.py
