[project]
name = "factguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=3.0.0",
    "ddgs>=9.14.1",
    "duckduckgo-search>=8.1.1",
    "google-genai>=1.73.1",
    "groq>=1.2.0",
    "langchain-community>=0.4.1",
    "pandas>=3.0.2",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]
